Fix bug 428091 - Unifinder close button icon is misaligned/misplaced. r=philipp

--- a/calendar/base/themes/winstripe/calendar-unifinder.css
+++ b/calendar/base/themes/winstripe/calendar-unifinder.css
@@ -84,7 +84,7 @@
 
 .unifinder-closebutton {
   list-style-image: url("chrome://global/skin/icons/close.png");
-  -moz-image-region: rect(0 16px 16px 0);
+  -moz-image-region: rect(0 14px 14px 0);
   -moz-appearance: none;
   border: none;
   padding: 2px;
@@ -92,9 +92,9 @@
 }
 
 .unifinder-closebutton:hover {
-  -moz-image-region: rect(0 32px 16px 16px);
+  -moz-image-region: rect(0 28px 14px 14px);
 }
 
 .unifinder-closebutton:hover:active {
-  -moz-image-region: rect(0 48px 16px 32px);
+  -moz-image-region: rect(0 42px 14px 28px);
 }
