--- a/calendar/base/themes/winstripe/today-pane.css
+++ b/calendar/base/themes/winstripe/today-pane.css
@@ -146,19 +146,19 @@
 }
 
 .today-closebutton {
-  list-style-image: url("chrome://messenger/skin/icons/close-button.png");
-  -moz-image-region: rect(0 16px 16px 0);
+  list-style-image: url("chrome://global/skin/icons/close.png");
+  -moz-image-region: rect(0 14px 14px 0);
   -moz-appearance: none;
   border: none !important;
   padding: 2px;
 }
 
 .today-closebutton:hover {
-  -moz-image-region: rect(0 32px 16px 16px);
+  -moz-image-region: rect(0 28px 14px 14px);
 }
 
 .today-closebutton:hover:active {
-  -moz-image-region: rect(0 48px 16px 32px);
+  -moz-image-region: rect(0 42px 14px 28px);
 }
 
 .today-closebutton > .toolbarbutton-icon {
